Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30779

QProcessEnvironment's implicit sharing is not thread safe

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.8.6, 5.1.0
    • 4.8.0, 5.0.0
    • Core: I/O
    • None
    • Ubuntu Linux 12.10 x86_64
    • 85e61297f7b02297641826332dbdbc845a88c34b,9c2c12b3ef1a17d54559d229bd788bcf1b731d55

    Description

      Qt Creator crashes when I edit pri file, save it and then start qmake fast (using shortcut), or even if it started automatically after saving.

      gdb log is in attach.

      Unfortunately I can't attach core file, because can't create it ("ulimit -c unlimited" does not work, generate-core-file in gdb-7.5 shows "Couldn't get registers: No such process."). Also I tried to use valgrind to find memory error, but no success.

      This bug can't be reproduced on very little project, so can't send one. I can send my project by e-mail, if you need to reproduce that bug.

      Attachments

        1. core.21860.7z
          9.87 MB
        2. gdb_qt_creator.log
          6 kB
        3. gdb_qt-creator-hang.log
          7 kB
        4. gdb-7.4.1_qt_creator.log
          7 kB
        5. qtcreator_bug_edit_pri_min.tar.bz2
          1 kB
        6. qtcreator_bug_parse_pri.tar.bz2
          26 kB

        Issue Links

          For Gerrit Dashboard: QTBUG-30779
          # Subject Branch Project Status CR V

          Activity

            People

              buddenha Oswald Buddenhagen
              loentar Dmitry Utkin
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes